--- a/plugin.xml
+++ b/plugin.xml
@@ -47,7 +47,7 @@
           </feature>
         </config-file>
         
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+        <config-file target="AndroidManifest.xml" parent="/manifest">
 	        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
         </config-file>
 
